--- a/src/main/resources/templates/normal/email.html
+++ b/src/main/resources/templates/normal/email.html
@@ -75,6 +75,11 @@
     </script>
 
 
+	<script>
+			$(".item").removeClass("active");
+			$("#mail-link").addClass("active");
+		</script>
+
 	</section>
 	
 
